Version history

1.19
- Better automatic detection wether alignment is Nucleotide or Amino-Acid
- Menu alternative to manually change alignment to Nucleotide or AminoAcid
- Confirmation box when deleting all gaps in all sequences
- Courier font on OS X regardless of Java VM
- Some changes on OS X retina screens when using Oracle Java
- Go to position in alignment

1.18.1

- Fixed bug in complement translation. IUPAC-K is now translated into M instead of previously S
- Updated osX application stub to make it recognize Oracle Java VM and not only Apple Java VM

1.18

- Big rewrite of code handling selection. Improvements and more standardized mouse selection of sequences (compared to other software)
- Fixed bug when saving alignment in Phylip format with "Save" command, padding was lost.
- Improvements when translating nucleotide sequences into aminoacid - editing sequences are now fully supported.
- Selection follows when translating sequences
- Added capabilities to define,edit, export(in RaxML format) and view Charsets in alignments
- Added "Show both aminoacid and nucleotide sequence" when translating nucleotide sequences to amino acids
- Added "slow" double click on name as a trigger for renaming a sequence
- Mouse wheel zoom in and zoom out is also working when mouse pointer is on sequence list
- Dropping an alignment file can now be done anywhere on the alignment program
- Quicker scroll when dragging sequences outside visible part of list
- Big rewrite of code handling large files (> 1GB)
- Improved multithreading in some sections of program makes it even more responsive.
- Fixed bug on Mac where sequences sometimes were saved in temp directory without asking user

1.17.1

- Fixed error in invertebrate mitochondrial coding table TGA was not coded as STOP, all other coding tables were verified without errors.

1.17

- Fixed bug that made it impossible to close error message if something went wrong when aligning